fix(perfil): arregla formulario de cambios perfil

--- a/voltgo/usuario/templates/account/gestionar_perfil.html
+++ b/voltgo/usuario/templates/account/gestionar_perfil.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Edit your account{% endblock %}
+{% block title %}Editar perfil{% endblock %}
 
 {% block content %}
   <div class="container text-center">
-    <h1 class="text-center">Edita tu perfil</h1>
+    <h1 class="text-center">Editar perfil</h1>
     <br />
     <form method="post" enctype="multipart/form-data">
       {% csrf_token %}
