--- a/voltgo/producto/templates/carrito.html
+++ b/voltgo/producto/templates/carrito.html
@@ -37,6 +37,11 @@
                                             -
                                         </button>
                                     </a>
+                                    {% if item.cantidad == item.producto.stock %}
+                                        <div class="alert alert-warning mt-2" role="alert">
+                                            Limite de stock alcanzado.
+                                        </div>
+                                    {% endif %}
                                 </div>
                             </td>
                         </tr>
