fix(tienda): Solucionados errores respecto a Compras y Reclamaciones.
Se ha arreglado los errores que daban respecto a Compras y Reclamaciones tras algunos cambios en los demás modelos. También se ha solucionado el mal funcionamiento del botón de limpiar filtros en el catálogo.

--- a/voltgo/producto/templates/catalogo.html
+++ b/voltgo/producto/templates/catalogo.html
@@ -45,7 +45,8 @@
                     {% else %}
                     <p class="card-text"><strong>Stock: {{ producto.producto.stock }} uds</strong></p>
                     {% endif %}
-                    <a href="{% url 'producto:detalle-producto' pk=producto.producto.id %}" class="btn btn-primary">Detalles</a>
+                    <a href="{% url 'producto:detalle-producto' pk=producto.producto.id %}"
+                        class="btn btn-primary">Detalles</a>
                 </div>
             </div>
         </div>
@@ -65,8 +66,10 @@
 <script>
     function resetFilters() {
         var form = document.getElementById("filtroForm");
-        form.reset();
+        form.nombre.value = '';
+        form.empresa.value = '';
+        form.precio_maximo.value = '';
+        form.submit();
     }
 </script>
 {% endblock %}
-
