fix(tienda): elimina datos de pago de formularios
Elimina los datos de pago del cliente de los formularios previos a la
pasarela de pago y deja exclusivamente el input del tipo de pago.

Relacionado con #18

--- a/voltgo/tienda/templates/resumen_pedido.html
+++ b/voltgo/tienda/templates/resumen_pedido.html
@@ -44,7 +44,7 @@
                 <header>
                     <h2>Información del pago</h2>
                 </header>
-                {{ form_tarjeta }}
+                {{ form_tipo_pago }}
             </article>
             <button type="submit" class="btn btn-success mb-3"><strong>Encargar/pagar ahora</strong></button>
         </section>
