deploy(tienda): Configuración realizada correctamente

--- a/voltgo/tienda/templates/navbar.html
+++ b/voltgo/tienda/templates/navbar.html
@@ -78,21 +78,21 @@
                 id="dropdownMenuButton">
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="http://localhost:8000/usuario/gestionar_perfil/">Editar Perfil</a>
+              <a class="dropdown-item" href="/usuario/gestionar_perfil/">Editar Perfil</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="http://localhost:8000/usuario/logout">Cerrar Sesión</a>
+              <a class="dropdown-item" href="/usuario/logout/">Cerrar Sesión</a>
             </div>
           </li>
           {% else %}
           <li class="nav-item">
-            <a class="nav-link" href="http://localhost:8000/usuario/register">
+            <a class="nav-link" href="/usuario/register/">
               <button type="button" class="btn btn-light">
                 <h7>Registrarse</h7>
               </button>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="http://localhost:8000/usuario/login">
+            <a class="nav-link" href="/usuario/login/">
               <button type="button" class="btn btn-primary">
                 <h7>Iniciar Sesión</h7>
               </button>
