fix(tienda): formularios de la pasarela

--- a/voltgo/tienda/templates/info_pago.html
+++ b/voltgo/tienda/templates/info_pago.html
@@ -10,7 +10,7 @@
                 </p> 
             </header>
 
-            <form action="{% url 'tienda:resumen-pedido' %}" method="post">
+            <form action="{% url 'tienda:info-pago' %}" method="post">
                 {% csrf_token %}
                 <div class="d-flex justify-content-around">
                     <div>
